--- a/Weeks1-2/Notes_Wks1-2.ipynb
+++ b/Weeks1-2/Notes_Wks1-2.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week 1-2: Notes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Notes from video\n",
-    "Wrangling Data with Pandas\n",
-    "https://www.youtube.com/watch?v=XDAnFZqJDvI"
+    "# Week 1-2: Notes"
    ]
   },
   {
@@ -23,6 +14,15 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes from videos\n",
+    "#### Wrangling Data with Pandas  \n",
+    "https://www.youtube.com/watch?v=XDAnFZqJDvI"
    ]
   },
   {
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### DataFram access:\n",
+    "##### DataFrame access:\n",
     "\n",
     "Columns"
    ]
@@ -908,7 +908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PfDA, Ch.2"
+    "## PfDA, Ch.2"
    ]
   },
   {
@@ -1672,7 +1672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PfDA, Ch. 3: Built-in Data Structures, Functions, and Files"
+    "## PfDA, Ch. 3: Built-in Data Structures, Functions, and Files"
    ]
   },
   {
@@ -1686,14 +1686,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DWwP, Ch 2: Advanced Data Structures and File Handling"
+    "## DWwP, Ch 2: Advanced Data Structures and File Handling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Iterator"
+    "### Iterator"
    ]
   },
   {
@@ -1950,7 +1950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Stacks"
+    "### Stacks"
    ]
   },
   {
@@ -2077,7 +2077,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 17: Implementing a Stack Using User-Defined Methods"
+    "### Exercise 17: Implementing a Stack Using User-Defined Methods"
    ]
   },
   {
@@ -2321,7 +2321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 18: Lambda Expression"
+    "### Exercise 18: Lambda Expression"
    ]
   },
   {
@@ -2403,7 +2403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 19: Lambda Expression for Sorting"
+    "### Exercise 19: Lambda Expression for Sorting"
    ]
   },
   {
@@ -2490,7 +2490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 20: Multi-Element Membership Checking"
+    "### Exercise 20: Multi-Element Membership Checking"
    ]
   },
   {
@@ -2561,7 +2561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Queue"
+    "### Queue"
    ]
   },
   {
@@ -2698,14 +2698,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basic File Operations in Python"
+    "### Basic File Operations in Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 22: File Operations"
+    "### Exercise 22: File Operations"
    ]
   },
   {
@@ -2775,7 +2775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### File Handling"
+    "#### File Handling"
    ]
   },
   {
@@ -2869,7 +2869,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 23: Opening and Closing a File"
+    "### Exercise 23: Opening and Closing a File"
    ]
   },
   {
@@ -2968,7 +2968,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 24: Reading a File Line by Line"
+    "### Exercise 24: Reading a File Line by Line"
    ]
   },
   {
@@ -3870,7 +3870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Exercise 25: Write to a File"
+    "### Exercise 25: Write to a File"
    ]
   },
   {
