--- a/Weeks5-6/BreitbachScott_DSC540_Weeks5-6.ipynb
+++ b/Weeks5-6/BreitbachScott_DSC540_Weeks5-6.ipynb
@@ -15994,7 +15994,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('visit_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -16008,7 +16020,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Duplicates in:\")\n",
+    "for name in df.columns:\n",
+    "    print(\"{:>15}:\".format(name), any(df[name].duplicated()))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -16022,7 +16038,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"'NaN's in:\")\n",
+    "df.isna().any()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -16032,11 +16051,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that we have unique IDs, email and IP addresses for every line.  \n",
+    "There are some names, gender data, and visit info duplicated and/or missing.  \n",
+    "Since we will be using the 'visit' data for analysis, we will remove any rows from this column that do not contain data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cleanDF = df[df['visit'].notnull()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -16050,7 +16080,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sizeData = {'Original DF': }"
+   ]
   },
   {
    "cell_type": "markdown",
