--- a/Weeks5-6/DWwP_Ch5-6/540Wk5-6_DWwP-Ch6.ipynb
+++ b/Weeks5-6/DWwP_Ch5-6/540Wk5-6_DWwP-Ch6.ipynb
@@ -2694,7 +2694,12 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
