completed all exercises

--- a/Weeks5-6/BreitbachScott_DSC540_Weeks5-6.ipynb
+++ b/Weeks5-6/BreitbachScott_DSC540_Weeks5-6.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "4    4           Germany       3,780,553"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "4    4           Germany       3,845,630"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "4    4           Germany       3,861,123"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
        "4    46.117.117.27  2434.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "sizeInBytes       320644     320014             630"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
        "sizeInBytes      320014            287487           32527"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,66 +1394,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sqlite3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = \"\"\"\n",
+    "CREATE TABLE test\n",
+    "(Name VARCHAR(20), Address VARCHAR(20),\n",
+    " City VARCHAR(20), State   VARCHAR(20),\n",
+    " Zip  INTEGER,     Phone_Number INTEGER\n",
+    " );\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "con = sqlite3.connect('mydata.sqlite')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f2aafe7ce0>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.execute(query)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate some data:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "def rando(num):\n",
+    "    '''Returns the number of random digits specified'''\n",
+    "    return random.randrange(10**(num-1), (10**num)-1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Name, Address, City, State, Zip, Phone Number\n",
+    "data = [\n",
+    "    ('John Cleese', '{} Hurlingham Road'.format(rando(4)), 'London', 'UK', rando(5), rando(10)),\n",
+    "    ('Terry Gilliam', '{} High Street'.format(rando(4)), 'Acton', 'UK', rando(5), rando(10)),\n",
+    "    ('Michael Palin', '{} Poole Harbour'.format(rando(3)), 'Dorset', 'UK', rando(5), rando(10)),\n",
+    "    ('Eric Idle', '{} South Ealing Road'.format(rando(4)), 'Ealing', 'UK', rando(5), rando(10)),\n",
+    "    ('Graham Chapman', '{} Teddington Lock'.format(rando(3)), 'London', 'UK', rando(5), rando(10)),\n",
+    "    ('Terry Jones', '{} Thorpebank Road'.format(rando(4)), \"Shepherd's Bush\", 'UK', rando(5), rando(10)),\n",
+    "    ('Mr. Badger', '{} Westminster Bridge'.format(rando(3)), 'London', 'UK', rando(5), rando(10)),\n",
+    "    ('Luigi Vercotti', '{} Elm Hill'.format(rando(4)), 'Norwich', 'UK', rando(5), rando(10)),\n",
+    "    ('Inspector Praline', '{} Winterton Road'.format(rando(3)), 'Norfolk', 'UK', rando(5), rando(10)),\n",
+    "    ('Njorl the Viking', '{} Ringland Hills'.format(rando(3)), 'Norwich', 'UK', rando(5), rando(10)),\n",
+    "    ('Johann Gambolputty', '{} Ludgate Hill'.format(rando(3)), 'London', 'UK', rando(5), rando(10)),\n",
+    "    ('Mrs. Pepperpots', '{} Southmere Terrace'.format(rando(3)), 'Bradford', 'UK', rando(5), rando(10)),\n",
+    "    ('Mr. Badger', '{} Toller Lane'.format(rando(5)), 'Bradford', 'UK', rando(5), rando(10))\n",
+    "]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stmt = \"INSERT INTO test VALUES(?, ?, ?, ?, ?, ?)\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f2aaff75e0>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.executemany(stmt, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = con.execute('select * from test')\n",
+    "rows = cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>Phone_Number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John Cleese</td>\n",
+       "      <td>9647 Hurlingham Road</td>\n",
+       "      <td>London</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>42493</td>\n",
+       "      <td>2508383693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Terry Gilliam</td>\n",
+       "      <td>2794 High Street</td>\n",
+       "      <td>Acton</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>76841</td>\n",
+       "      <td>1897584181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Michael Palin</td>\n",
+       "      <td>867 Poole Harbour</td>\n",
+       "      <td>Dorset</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>47320</td>\n",
+       "      <td>9343073282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Eric Idle</td>\n",
+       "      <td>7804 South Ealing Road</td>\n",
+       "      <td>Ealing</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>74586</td>\n",
+       "      <td>9316705137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Graham Chapman</td>\n",
+       "      <td>303 Teddington Lock</td>\n",
+       "      <td>London</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>23187</td>\n",
+       "      <td>8683794392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Terry Jones</td>\n",
+       "      <td>9350 Thorpebank Road</td>\n",
+       "      <td>Shepherd's Bush</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>23047</td>\n",
+       "      <td>6756540689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mr. Badger</td>\n",
+       "      <td>654 Westminster Bridge</td>\n",
+       "      <td>London</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>26123</td>\n",
+       "      <td>4869054228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Luigi Vercotti</td>\n",
+       "      <td>6003 Elm Hill</td>\n",
+       "      <td>Norwich</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>91967</td>\n",
+       "      <td>6590472056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Inspector Praline</td>\n",
+       "      <td>885 Winterton Road</td>\n",
+       "      <td>Norfolk</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>85993</td>\n",
+       "      <td>2930227802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Njorl the Viking</td>\n",
+       "      <td>378 Ringland Hills</td>\n",
+       "      <td>Norwich</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>27136</td>\n",
+       "      <td>8416944743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Johann Gambolputty</td>\n",
+       "      <td>640 Ludgate Hill</td>\n",
+       "      <td>London</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>81594</td>\n",
+       "      <td>1310911473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Mrs. Pepperpots</td>\n",
+       "      <td>550 Southmere Terrace</td>\n",
+       "      <td>Bradford</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>31402</td>\n",
+       "      <td>6396119856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Mr. Badger</td>\n",
+       "      <td>31949 Toller Lane</td>\n",
+       "      <td>Bradford</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>33371</td>\n",
+       "      <td>7258192396</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                 Address             City State    Zip  \\\n",
+       "0          John Cleese    9647 Hurlingham Road           London    UK  42493   \n",
+       "1        Terry Gilliam        2794 High Street            Acton    UK  76841   \n",
+       "2        Michael Palin       867 Poole Harbour           Dorset    UK  47320   \n",
+       "3            Eric Idle  7804 South Ealing Road           Ealing    UK  74586   \n",
+       "4       Graham Chapman     303 Teddington Lock           London    UK  23187   \n",
+       "5          Terry Jones    9350 Thorpebank Road  Shepherd's Bush    UK  23047   \n",
+       "6           Mr. Badger  654 Westminster Bridge           London    UK  26123   \n",
+       "7       Luigi Vercotti           6003 Elm Hill          Norwich    UK  91967   \n",
+       "8    Inspector Praline      885 Winterton Road          Norfolk    UK  85993   \n",
+       "9     Njorl the Viking      378 Ringland Hills          Norwich    UK  27136   \n",
+       "10  Johann Gambolputty        640 Ludgate Hill           London    UK  81594   \n",
+       "11     Mrs. Pepperpots   550 Southmere Terrace         Bradford    UK  31402   \n",
+       "12          Mr. Badger       31949 Toller Lane         Bradford    UK  33371   \n",
+       "\n",
+       "    Phone_Number  \n",
+       "0     2508383693  \n",
+       "1     1897584181  \n",
+       "2     9343073282  \n",
+       "3     9316705137  \n",
+       "4     8683794392  \n",
+       "5     6756540689  \n",
+       "6     4869054228  \n",
+       "7     6590472056  \n",
+       "8     2930227802  \n",
+       "9     8416944743  \n",
+       "10    1310911473  \n",
+       "11    6396119856  \n",
+       "12    7258192396  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(rows, columns=[x[0] for x in cursor.description])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.close()"
+   ]
   },
   {
    "cell_type": "code",
