--- a/Weeks7-8/BreitbachScott_DSC540_Weeks7-8.ipynb
+++ b/Weeks7-8/BreitbachScott_DSC540_Weeks7-8.ipynb
@@ -22,8 +22,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/metmuseum/openaccess/raw/master/MetObjects.csv"
+    "https://github.com/metmuseum/openaccess/raw/master/MetObjects.csv  \n",
+    "https://www.scq.ubc.ca/so-much-candy-data-seriously/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
